# embedded-dispenser

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: architecture.md
examples/: demo_server.py
projects/: README.md
projects/fluid-transfer/: README.md
projects/fluid-transfer/examples/: run_simulation.py
projects/robot-arm/: README.md
projects/robot-arm/examples/: run_simulation.py
scripts/: replay-history.ps1
src/embedded_control/: __init__.py
src/embedded_control/motion/: __init__.py  calculator.py  curve_functions.py  phase_builder.py  profile_types.py
src/embedded_control/process/: __init__.py  config.py  state_machine.py
src/embedded_control/sensors/: __init__.py  base.py  config.py  dispatcher.py  events.py  registry.py  simulated.py
src/embedded_control/websocket/: __init__.py  base.py  processor.py  router.py
src/embedded_control/websocket/handlers/: __init__.py  echo.py  health.py  ping.py
src/fluid_transfer/: __init__.py  config.py  flow_sensor_monitor.py  gate_controller.py  interfaces.py  operator_trigger_monitor.py  orchestrator.py  pump_controller.py  request_parser.py  simulated.py
src/robot_arm/: __init__.py  config.py  interfaces.py  orchestrator.py  retry.py  simulated.py  stage_executor.py  stages.py
tests/: test_fluid_transfer.py  test_motion.py  test_process_state_machine.py  test_robot_arm.py  test_sensors.py  test_websocket.py
