[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "embedded-control-framework"
version = "0.1.0"
description = "Reusable patterns for embedded control systems on Linux-based hardware."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "bonsteeve", email = "bonsteeve@users.noreply.github.com" }]
keywords = ["embedded", "iot", "state-machine", "sensors", "motion-control"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: System :: Hardware",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.25",
    "ruff>=0.9",
]

[project.urls]
Homepage = "https://github.com/bonsteeve/embedded-dispenser"
Documentation = "https://github.com/bonsteeve/embedded-dispenser#readme"
Repository = "https://github.com/bonsteeve/embedded-dispenser"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]