[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "embedded-control-framework"
version = "0.1.0"
description = "Reusable patterns for embedded control: WebSocket routing, sensor monitoring, fluid transfer, and robot arm orchestration."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "bonsteeve", email = "bonsteeve@users.noreply.github.com" }]
keywords = ["embedded", "iot", "websocket", "state-machine", "sensors", "motion-control", "robotics", "fluid-transfer"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: System :: Hardware",
]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "websockets>=14.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.25",
    "httpx>=0.28",
    "ruff>=0.9",
]

[project.urls]
Homepage = "https://github.com/bonsteeve/embedded-dispenser"
Documentation = "https://github.com/bonsteeve/embedded-dispenser#readme"
Repository = "https://github.com/bonsteeve/embedded-dispenser"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
